<resources>
    <string name="app_name">Bite</string>
    <string name="toolbar_title">HI, %1$s!</string>
    <string name="toolbar_profile">%1$s</string>
    <string name="action_account">Account</string>
    <string name="action_logout">Logout</string>

    <!-- OAuth -->
    <string name="oauth_web_client_id">389337808613-0p56858ehmjkn3drs28tlh5bue1fa5mi.apps.googleusercontent.com</string>

    <string name="login_welcome_title">OH, HI!</string>
    <string name="login_welcome_description">Leuk dat je even komt kijken!\n BITE is momenteel alleen te gebruiken door medewerkers van Move4Mobile.</string>
    <string name="powered_by">powered by</string>

    <string name="brand_description">Bite Logo</string>
    <string name="firebase_connection_status">Firebase connection status</string>
    <string name="trophy_description">Trophy image</string>
    <string name="arrow_description">Arrow image</string>
    <string name="location_description">Location image</string>
    <string name="person_description">Person image</string>


    <string name="rank_card_title">RANGLIJSTEN</string>
    <string name="rank_card_text">Je staat op de 1337ste plek ANON!</string>


    <string name="bites">BITES (%1$d) ¯\\_(ツ)_/¯</string>
    <string name="closed_bites">CLOSED BITES (%1$d) ¯\\_(ツ)_/¯</string>
    <string name="empty_bites_title">HONGER!</string>
    <string name="empty_bites_description">Er staan momenteel geen BITES open.\r\nJe kunt zelf een nieuwe BITE openen door op de plus te tikken!</string>


    <string name="toolbar_title_restaurant">Store de la Anon</string>
    <string name="bite_card_start_close_time">Gestart om %1$s, sluit om %2$s</string>
    <string name="menu_item_price">%1$d</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="number">%1$d</string>

    <string name="compasse">compasse</string>
    <string name="compasse_bold">compasse_bold</string>
    <string name="compasse_extra_bold">compasse_extra_bold</string>
    <string name="compasse_extra_bold_italic">compasse_extra_bold_italic</string>

    <string name="loading">Loading&#8230;</string>

    <string name="order_items_count">%1$d ITEMS</string>
    <string name="order_items_total">%1$d ORDERS, %2$d ITEMS</string>
    <string name="order_items_price">%1$d</string>
    <string name="empty_order_title">HEB JE GEEN HONGER?</string>
    <string name="empty_order_description">Je kunt items toevoegen door deze kaart weer omlaag te schuiven. Of check bij de Top 5 eens wat je collega’s het meest bestellen!</string>
    <string name="bring_it_on">BRING IT ON!</string>
    <string name="bring_it_on_locked">WIJZIG</string>
    <string name="bite_finish">Afronden</string>
    <string name="bite_archive">Archiveren</string>
    <string name="bite_remove">Verwijderen</string>

</resources>
