<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bite_restaurant_menu_item_height"
    app:cardElevation="@dimen/bite_restaurant_menu_item_elevation"
    app:cardCornerRadius="@dimen/bite_restaurant_menu_item_corner_radius"
    android:backgroundTint="?cardViewBackground"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="@dimen/bite_restaurant_menu_item_trophy_size"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/menu_item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/bite_restaurant_menu_item_trophy_margin"
                android:src="@drawable/ic_snacks"
                android:contentDescription="@string/trophy_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/bite_restaurant_menu_item_text_layout_weight"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_margin="@dimen/bite_restaurant_menu_item_text_layout_margin">
            <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                android:id="@+id/menu_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/bite_restaurant_menu_item_text_padding"
                android:text="@string/loading"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_bite_restaurant_menu_item_title"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                app:customFont="@string/compasse"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/ic_bitecoin"/>
                <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                    android:id="@+id/menu_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bite_restaurant_menu_item_text_padding"
                    android:text="@string/loading"
                    android:textSize="@dimen/font_size_bite_restaurant_menu_item_price"
                    app:customFont="@string/compasse"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="@dimen/bite_restaurant_menu_item_text_layout_margin"
            android:orientation="horizontal">
            <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                android:id="@+id/menu_item_remove"
                android:layout_width="@dimen/bite_restaurant_menu_item_action_size"
                android:layout_height="@dimen/bite_restaurant_menu_item_action_size"
                android:text="@string/minus"
                android:gravity="center"
                android:textSize="@dimen/font_size_bite_restaurant_menu_item_action"
                android:includeFontPadding="false"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                app:customFont="@string/compasse_bold"
                android:visibility="gone"/>
            <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                android:id="@+id/menu_item_amount"
                android:layout_width="@dimen/bite_restaurant_menu_item_action_size"
                android:layout_height="@dimen/bite_restaurant_menu_item_action_size"
                android:text="@string/number"
                android:textColor="?android:colorAccent"
                android:gravity="center"
                android:textSize="@dimen/font_size_bite_restaurant_menu_item_amount"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/bite_restaurant_menu_item_amount_margin"
                android:layout_marginEnd="@dimen/bite_restaurant_menu_item_amount_margin"
                app:customFont="@string/compasse_extra_bold"
                android:visibility="gone"/>
            <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                android:id="@+id/menu_item_add"
                android:layout_width="@dimen/bite_restaurant_menu_item_action_size"
                android:layout_height="@dimen/bite_restaurant_menu_item_action_size"
                android:text="@string/plus"
                android:gravity="center"
                android:textSize="@dimen/font_size_bite_restaurant_menu_item_action"
                android:includeFontPadding="false"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                app:customFont="@string/compasse_bold"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>