<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    android:stateListAnimator="@animator/lift_on_touch">

    <RadioButton
        android:id="@+id/bite_open_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="-3dp"
        android:clickable="false"
        android:buttonTint="?colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
            android:id="@+id/bite_card_open_title"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/loading"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            app:customFont="@string/compasse_extra_bold_italic"/>
        <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
            android:id="@+id/bite_card_open_location"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/loading"
            android:textSize="14sp"
            android:textColor="@color/colorTextSecondary"
            app:customFont="@string/compasse"/>
    </LinearLayout>

    <View android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <!-- Emojis -->
    <LinearLayout
        android:id="@+id/bite_card_open_emoji_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>