<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bite_restaurant_menu_item_height"
    android:baselineAligned="false"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
            android:id="@+id/menu_item_amount"
            android:layout_width="@dimen/bite_restaurant_menu_item_action_size"
            android:layout_height="@dimen/bite_restaurant_menu_item_action_size"
            android:layout_marginEnd="@dimen/bite_restaurant_menu_item_amount_margin"
            android:layout_marginStart="@dimen/bite_restaurant_menu_item_amount_margin"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/number"
            android:textColor="?android:colorAccent"
            android:textSize="@dimen/font_size_bite_restaurant_menu_item_amount"
            app:customFont="@string/compasse_extra_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/bite_restaurant_menu_item_text_layout_margin"
        android:layout_weight="@integer/bite_restaurant_menu_item_text_layout_weight"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
            android:id="@+id/menu_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:padding="@dimen/bite_restaurant_menu_item_text_padding"
            android:text="@string/loading"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_bite_restaurant_menu_item_title"
            app:customFont="@string/compasse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_bitecoin" />

            <com.move4mobile.apps.bite.customlayoutclasses.TextViewCustom
                android:id="@+id/menu_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/bite_restaurant_menu_item_text_padding"
                android:text="@string/loading"
                android:textSize="@dimen/font_size_bite_restaurant_menu_item_price"
                app:customFont="@string/compasse" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_product_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--<ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_shipit"
            android:elevation="2dp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-8dp"
            android:src="@drawable/ic_shipit"
            android:elevation="1dp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-8dp"
            android:src="@drawable/ic_shipit" />-->
    </LinearLayout>
</LinearLayout>